--- a/SDWU-Colab.ipynb
+++ b/SDWU-Colab.ipynb
@@ -5,26 +5,26 @@
       "execution_count": 1,
       "metadata": {
         "cellView": "form",
-        "id": "dEVFeqeWiP6p",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 93
         },
+        "id": "dEVFeqeWiP6p",
         "outputId": "00a1c5a4-3da6-4a7a-8461-5339c43d7303"
       },
       "outputs": [
         {
-          "output_type": "display_data",
           "data": {
-            "text/plain": [
-              "<IPython.core.display.HTML object>"
-            ],
             "text/html": [
               "<b>Press play on the music player to keep the tab alive before running the start cell (Uses only 13MB of data)</b><br/>\n",
               "<audio src=\"https://raw.githubusercontent.com/KoboldAI/KoboldAI-Client/main/colab/silence.m4a\" controls>\n"
+            ],
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
             ]
           },
-          "metadata": {}
+          "metadata": {},
+          "output_type": "display_data"
         }
       ],
       "source": [
@@ -662,9 +662,9 @@
         "%pip install -q xformers==0.0.18 triton==2.0.0 gdown -U\n",
         "\n",
         "print(\"Clone semua repository yang dibutuhkan.\")\n",
-        "!git clone https://github.com/aikazu/stable-diffusion-webui /content/sdwebui\n",
-        "!git clone https://github.com/AlUlkesh/stable-diffusion-webui-images-browser /content/sdwebui/extensions/sdwebui-images-browser\n",
-        "!git clone https://github.com/camenduru/stable-diffusion-webui-huggingface /content/sdwebui/extensions/sdwebui-huggingface\n",
+        "!git clone https://github.com/thed0704/SDWU /content/sdwebui\n",
+        "!git clone https://github.com/thed0704/SDWU-images-browser /content/sdwebui/extensions/sdwebui-images-browser\n",
+        "!git clone https://github.com/thed0704/SDWU-huggingface /content/sdwebui/extensions/sdwebui-huggingface\n",
         "!git clone https://github.com/camenduru/sd-civitai-browser /content/sdwebui/extensions/sd-civitai-browser\n",
         "!git clone https://github.com/kohya-ss/sd-webui-additional-networks /content/sdwebui/extensions/sd-webui-additional-networks\n",
         "!git clone https://github.com/Mikubill/sd-webui-controlnet /content/sdwebui/extensions/sd-webui-controlnet\n",
